WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284512
Fix more C++ smart pointer warnings in WebKit
https://bugs.webkit.org/show_bug.cgi?id=284512
Summary
Fix more C++ smart pointer warnings in WebKit
Ryosuke Niwa
Reported
2024-12-11 22:02:16 PST
Address more outstanding clang static analyzer warnings in WebKit.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-12-11 22:34:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37820
EWS
Comment 2
2024-12-12 09:55:27 PST
Committed
287748@main
(e47b2a9d69c6): <
https://commits.webkit.org/287748@main
> Reviewed commits have been landed. Closing PR #37820 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-12 09:56:43 PST
<
rdar://problem/141365579
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug