Fix more C++ smart pointer warnings in WebKit https://bugs.webkit.org/show_bug.cgi?id=284512

Reviewed by Jean-Yves Avenard and Anne van Kesteren.

Address more clang static analyzer warnings in WebKit.

* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::imageDecoderAVFProxy):
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.h:
* Source/WebKit/NetworkProcess/CustomProtocols/Cocoa/LegacyCustomProtocolManagerCocoa.mm:
(+[WKCustomProtocol canInitWithRequest:]):
* Source/WebKit/NetworkProcess/EarlyHintsResourceLoader.cpp:
(WebKit::EarlyHintsResourceLoader::startPreconnectTask):
* Source/WebKit/WebProcess/WebCoreSupport/WebProcessSyncClient.cpp:
(WebKit::WebProcessSyncClient::siteIsolationEnabled):

Canonical link: https://commits.webkit.org/287748@main